objects/ProductItemPrice__c.object
<CustomObject>
    <fields>
        <fullName>CostCurrency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateFormula__c</fullName>
        <formula>Datevalue(EndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GaibuID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentEnglishName__c</fullName>
        <formula>ProductItem__r.EnglishName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent English Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentIsDisplayedAsiaSignal__c</fullName>
        <formula>ProductItem__r.IsDisplayedAsiaSignal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentIsDisplayedAsiaSignal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentModelType__c</fullName>
        <formula>ProductItem__r.ModelTypeDisplay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Model Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBookCode__c</fullName>
        <defaultValue>&apos;A14&apos;</defaultValue>
        <label>Price Book Code</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBookOrigin__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>Price Book Origin</label>
        <length>27</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceUnit__c</fullName>
        <label>Price Unit</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <label>Product Item</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>品目価格</relationshipLabel>
        <relationshipName>ProductItemPrice_ProductItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <label>Quantity Unit</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateFormula__c</fullName>
        <formula>DATEVALUE(StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechnicalAlways1__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Technical Always 1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>品目価格</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductItem__c</columns>
        <columns>PriceBookCode__c</columns>
        <columns>CostCurrency__c</columns>
        <columns>Price__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>PIP-{00000000}</displayFormat>
        <label>Product Item Price No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TechnicalAlways1</fullName>
        <active>true</active>
        <errorConditionFormula>TechnicalAlways1__c &lt;&gt; 1</errorConditionFormula>
        <errorMessage>TechnicalAlways1は「１」じゃないといけない。</errorMessage>
    </validationRules>
</CustomObject>